# mvodb

./: .cookiecutterrc  .copier-answers.yml  .cruft.json  CONTRIBUTING.md  CREDITS.md  Makefile  README.md  coverage.ini  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: coverage.ini
docs/: conf.py  gen_ref_nav.py  index.md
docs/reference/: cli.md
scripts/: gen-readme-data.py
scripts/templates/: CREDITS.md  README.md
src/mvodb/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py
